# octopus

./: .clawd-todos.json  .env.example  .gitignore  .spectral.js  AGENTS.md  Cargo.toml  README.md  claw-code-sync-ledger.md  deny.toml  eslint.config.mjs  lefthook.yml  mock_parity_scenarios.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.base.json  turbo.json
apps/remote-hub/: Cargo.toml
apps/remote-hub/src/: dev_seed.rs  lib.rs  main.rs
apps/remote-hub/tests/: auth_surface.rs  dev_seed.rs  http_surface.rs  webhook_ingress.rs
crates/octopus-api-http/: Cargo.toml
crates/octopus-api-http/examples/: dev_server.rs
crates/octopus-api-http/src/: lib.rs
crates/octopus-api-http/tests/: phase3_http.rs
crates/octopus-application/: Cargo.toml
crates/octopus-application/src/: lib.rs
crates/octopus-cli/: Cargo.toml
crates/octopus-cli/src/: automation.rs  config.rs  init.rs  input.rs  lib.rs  main.rs  project.rs  render.rs  run_once.rs  workspace.rs
crates/octopus-cli/tests/: min_cli.rs  run_once_smoke.rs
crates/octopus-desktop/: Cargo.toml
crates/octopus-desktop-backend/: Cargo.toml
crates/octopus-desktop-backend/src/: main.rs
crates/octopus-desktop/src/: main.rs
crates/octopus-harness-context/: Cargo.toml  README.md
crates/octopus-harness-context/src/: buffer.rs  engine.rs  lib.rs  prompt.rs  provider.rs  stages.rs
crates/octopus-harness-context/tests/: cache_stability.rs  compact.rs  contract.rs  engine.rs  recall_memdir.rs  stages.rs
crates/octopus-harness-contracts/: Cargo.toml  README.md
crates/octopus-harness-contracts/examples/: export_schemas.rs
crates/octopus-harness-contracts/src/: blob.rs  capability.rs  dangerous_patterns.rs  enums.rs  errors.rs  ids.rs  lib.rs  messages.rs  redactor.rs  schema_export.rs  tool.rs
crates/octopus-harness-contracts/tests/: hook_contracts.rs  m1_contracts.rs  tool_search_mode.rs
crates/octopus-harness-engine/: Cargo.toml  README.md
crates/octopus-harness-engine/src/: capability_assembly.rs  end_reason.rs  engine.rs  interrupt.rs  lib.rs  result_inject.rs  runner.rs  state.rs  turn.rs
crates/octopus-harness-engine/tests/: capability.rs  contract.rs  e2e_engine.rs  interrupt.rs  main_loop.rs
crates/octopus-harness-hook/: Cargo.toml  README.md
crates/octopus-harness-hook/src/: context.rs  dispatcher.rs  event.rs  handler.rs  lib.rs  outcome.rs  registry.rs  views.rs
crates/octopus-harness-hook/tests/: api_contract.rs  contract.rs  exec.rs  http.rs  in_process.rs  registry_dispatcher.rs  replay_idempotent.rs  spike_replay_idempotent.rs
crates/octopus-harness-journal/: Cargo.toml  README.md
crates/octopus-harness-journal/src/: audit.rs  blob.rs  jsonl.rs  lib.rs  memory.rs  mock.rs  projection.rs  retention.rs  snapshot.rs  sqlite.rs  store.rs  version.rs
crates/octopus-harness-journal/tests/: audit.rs  contract.rs  l1b_stores.rs  m2_t06.rs  replay.rs  version.rs
crates/octopus-harness-mcp/: Cargo.toml  README.md
crates/octopus-harness-mcp/src/: client.rs  elicitation.rs  error.rs  jsonrpc.rs  lib.rs  oauth.rs  reconnect.rs  registry.rs  sampling.rs  server.rs  transport.rs  types.rs  wrapper.rs
crates/octopus-harness-mcp/tests/: contract.rs  core.rs  elicitation.rs  http.rs  in_process.rs  list_changed.rs  oauth.rs  reconnect.rs  sampling.rs  server.rs  sse.rs  stdio.rs  tenant_isolation.rs  websocket.rs
crates/octopus-harness-memory/: Cargo.toml  README.md
crates/octopus-harness-memory/src/: external.rs  lib.rs  lifecycle.rs  mock.rs  scanner.rs  store.rs  types.rs
crates/octopus-harness-memory/tests/: api_contract.rs  contract.rs  external_slot.rs  memdir.rs  recall.rs  scanner.rs
crates/octopus-harness-model/: Cargo.toml  README.md
crates/octopus-harness-model/src/: aux.rs  codex.rs  cost.rs  credential.rs  credential_pool.rs  deepseek.rs  doubao.rs  km.rs  lib.rs  local_llama.rs  middleware.rs  minimax.rs  mock.rs  openai.rs  openrouter.rs  provider.rs  qwen.rs  token_counter.rs  zhipu.rs
crates/octopus-harness-model/tests/: anthropic_cache.rs  anthropic_client.rs  anthropic_streaming.rs  contract.rs  cost.rs  credential_pool.rs  mock.rs  provider_bedrock.rs  provider_codex.rs  provider_domestic.rs  provider_gemini.rs  provider_local_llama.rs  provider_openai.rs  provider_openrouter.rs  spike_prompt_cache.rs  t01_contract.rs
crates/octopus-harness-observability/: Cargo.toml  README.md
crates/octopus-harness-observability/src/: contract.rs  error.rs  lib.rs  otel.rs  redactor.rs  replay.rs  tracer.rs  usage.rs
crates/octopus-harness-observability/tests/: contract.rs  journal_redactor_pipeline.rs  redactor.rs  replay.rs  tracer.rs  usage.rs
crates/octopus-harness-permission/: Cargo.toml  README.md
crates/octopus-harness-permission/src/: broker.rs  dangerous.rs  decision.rs  direct.rs  integrity_signer.rs  lib.rs  mock.rs  rule.rs  rule_engine.rs  stream.rs
crates/octopus-harness-permission/tests/: api_surface.rs  contract.rs  dangerous.rs  direct.rs  integrity_signer.rs  mock.rs  rule_engine.rs  rule_engine_dangerous.rs  stream.rs
crates/octopus-harness-plugin/: Cargo.toml  README.md
crates/octopus-harness-plugin/src/: capability.rs  dynamic_load.rs  error.rs  lib.rs  loader.rs  manifest.rs  plugin.rs  registry.rs  signer.rs
crates/octopus-harness-plugin/tests/: contract.rs  loader.rs  registry.rs  signer.rs  sources.rs
crates/octopus-harness-sandbox/: Cargo.toml  README.md
crates/octopus-harness-sandbox/src/: backend.rs  code_sandbox.rs  cwd.rs  dangerous.rs  docker.rs  lib.rs  noop.rs  (+2 more)
crates/octopus-harness-sdk/: Cargo.toml  README.md
crates/octopus-harness-session/: Cargo.toml  README.md
crates/octopus-harness-skill/: Cargo.toml  README.md
crates/octopus-harness-subagent/: Cargo.toml  README.md
crates/octopus-harness-team/: Cargo.toml  README.md
crates/octopus-harness-tool/: Cargo.toml  README.md
crates/octopus-harness-tool-search/: Cargo.toml  README.md
crates/octopus-hub/: Cargo.toml
crates/octopus-infra/: Cargo.toml
crates/octopus-infra-sqlite/: Cargo.toml
crates/octopus-platform/: Cargo.toml
(+2399 files in other folders)
