[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/*",
]
default-members = [
  "apps/desktop/src-tauri",
  "crates/octopus-core",
  "crates/octopus-platform",
  "crates/octopus-infra",
  "crates/octopus-runtime-adapter",
  "crates/octopus-server",
  "crates/octopus-desktop-backend",
]
resolver = "2"

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.78"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["http1", "json", "macros", "tokio"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-log = "2"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
assigning_clones = "allow"
assertions_on_constants = "allow"
bool_to_int_with_if = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
case_sensitive_file_extension_comparisons = "allow"
cloned_ref_to_slice_refs = "allow"
format_in_format_args = "allow"
items_after_test_module = "allow"
map_unwrap_or = "allow"
manual_let_else = "allow"
manual_string_new = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
question_mark = "allow"
redundant_closure_for_method_calls = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unnecessary_join = "allow"
unnecessary_to_owned = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
unused_self = "allow"
useless_conversion = "allow"
wildcard_imports = "allow"
