[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/octopus-core",
  "crates/octopus-persistence",
  "crates/octopus-platform",
  "crates/octopus-infra",
  "crates/octopus-server",
  "crates/octopus-desktop",
  "crates/octopus-cli",
  "crates/octopus-sdk-contracts",
  "crates/octopus-sdk-model",
  "crates/octopus-sdk-session",
  "crates/octopus-sdk-tools",
  "crates/octopus-sdk-mcp",
  "crates/octopus-sdk-permissions",
  "crates/octopus-sdk-sandbox",
  "crates/octopus-sdk-hooks",
  "crates/octopus-sdk-context",
  "crates/octopus-sdk-subagent",
  "crates/octopus-sdk-plugin",
  "crates/octopus-sdk-observability",
  "crates/octopus-sdk-core",
  "crates/octopus-sdk",
  "crates/octopus-harness-contracts",
  "crates/octopus-harness-model",
  "crates/octopus-harness-journal",
  "crates/octopus-harness-sandbox",
  "crates/octopus-harness-permission",
  "crates/octopus-harness-memory",
  "crates/octopus-harness-tool",
  "crates/octopus-harness-tool-search",
  "crates/octopus-harness-skill",
  "crates/octopus-harness-mcp",
  "crates/octopus-harness-hook",
  "crates/octopus-harness-context",
  "crates/octopus-harness-session",
  "crates/octopus-harness-engine",
  "crates/octopus-harness-subagent",
  "crates/octopus-harness-team",
  "crates/octopus-harness-plugin",
  "crates/octopus-harness-observability",
  "crates/octopus-harness-sdk",
]
default-members = [
  "apps/desktop/src-tauri",
  "crates/octopus-core",
  "crates/octopus-persistence",
  "crates/octopus-platform",
  "crates/octopus-infra",
  "crates/octopus-server",
  "crates/octopus-desktop",
  "crates/octopus-sdk-contracts",
  "crates/octopus-sdk-model",
  "crates/octopus-sdk-session",
  "crates/octopus-sdk-tools",
  "crates/octopus-sdk-mcp",
  "crates/octopus-sdk-permissions",
  "crates/octopus-sdk-sandbox",
  "crates/octopus-sdk-hooks",
  "crates/octopus-sdk-context",
  "crates/octopus-sdk-subagent",
  "crates/octopus-sdk-plugin",
  "crates/octopus-sdk-observability",
  "crates/octopus-sdk-core",
  "crates/octopus-sdk",
  "crates/octopus-harness-contracts",
  "crates/octopus-harness-model",
  "crates/octopus-harness-journal",
  "crates/octopus-harness-sandbox",
  "crates/octopus-harness-permission",
  "crates/octopus-harness-memory",
  "crates/octopus-harness-tool",
  "crates/octopus-harness-tool-search",
  "crates/octopus-harness-skill",
  "crates/octopus-harness-mcp",
  "crates/octopus-harness-hook",
  "crates/octopus-harness-context",
  "crates/octopus-harness-session",
  "crates/octopus-harness-engine",
  "crates/octopus-harness-subagent",
  "crates/octopus-harness-team",
  "crates/octopus-harness-plugin",
  "crates/octopus-harness-observability",
  "crates/octopus-harness-sdk",
]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.78"

[workspace.dependencies]
async-stream = "0.3.6"
arc-swap = "1.9.1"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http1", "json", "macros", "tokio"] }
bytes = "1.11.1"
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.32"
fs2 = "0.4.3"
globset = "0.4.18"
http = "1.4.0"
ignore = "0.4.25"
log = "0.4.29"
notify = "8.2.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
ring = "0.17.14"
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
secrecy = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin-log = "2.8.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
ulid = { version = "1.2.1", features = ["serde"] }
unicode-normalization = "0.1.25"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
zeroize = "1.8.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
assigning_clones = "allow"
assertions_on_constants = "allow"
bool_to_int_with_if = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
case_sensitive_file_extension_comparisons = "allow"
cloned_ref_to_slice_refs = "allow"
format_in_format_args = "allow"
items_after_test_module = "allow"
map_unwrap_or = "allow"
manual_let_else = "allow"
manual_string_new = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
question_mark = "allow"
redundant_closure_for_method_calls = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unnecessary_join = "allow"
unnecessary_to_owned = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
unused_self = "allow"
useless_conversion = "allow"
wildcard_imports = "allow"
