[package]
name = "octopus-remote-hub"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
octopus-execution = { path = "../../crates/execution" }
octopus-runtime = { path = "../../crates/runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util.workspace = true
jsonschema.workspace = true
tempfile.workspace = true
tower.workspace = true
walkdir.workspace = true
