[package]
name = "octopus-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
octopus-domain = { path = "../octopus-domain" }
octopus-shared = { path = "../octopus-shared" }
serde.workspace = true
serde_json.workspace = true
