[package]
name = "octopus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
crossterm = "0.28"
futures = "0.3"
octopus-sdk = { path = "../octopus-sdk" }
pulldown-cmark = "0.13"
reqwest.workspace = true
rustyline = "15"
serde_json.workspace = true
syntect = "5"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
