[package]
name = "octopus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
crossterm = "0.28"
futures = "0.3"
octopus-harness-context = { path = "../octopus-harness-context" }
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
octopus-harness-hook = { path = "../octopus-harness-hook" }
octopus-harness-journal = { path = "../octopus-harness-journal", features = ["in-memory"] }
octopus-harness-model = { path = "../octopus-harness-model", features = ["mock"] }
octopus-harness-permission = { path = "../octopus-harness-permission" }
octopus-harness-session = { path = "../octopus-harness-session" }
octopus-harness-tool = { path = "../octopus-harness-tool", features = ["builtin-toolset"] }
octopus-sdk = { path = "../octopus-sdk" }
pulldown-cmark = "0.13"
reqwest.workspace = true
rustyline = "15"
serde_json.workspace = true
syntect = "5"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
