[package]
name = "octopus-desktop-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
log.workspace = true
octopus-core = { path = "../octopus-core" }
octopus-infra = { path = "../octopus-infra" }
octopus-platform = { path = "../octopus-platform" }
octopus-runtime-adapter = { path = "../octopus-runtime-adapter" }
octopus-server = { path = "../octopus-server" }
tokio.workspace = true
