[package]
name = "octopus-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
log.workspace = true
octopus-core = { path = "../octopus-core" }
octopus-infra = { path = "../octopus-infra" }
octopus-platform = { path = "../octopus-platform" }
octopus-server = { path = "../octopus-server" }
tokio.workspace = true
