[package]
name = "octopus-harness-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_hook"

[lints]
workspace = true

[features]
default = []
in-process = []
exec = []
http = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
