[package]
name = "octopus-harness-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_journal"

[lints]
workspace = true

[features]
default = []
sqlite = ["dep:rusqlite"]
jsonl = ["dep:fs2"]
in-memory = []
mock = ["in-memory"]
blob-file = []
blob-sqlite = ["sqlite"]

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
