[package]
name = "octopus-harness-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_memory"

[lints]
workspace = true

[features]
default = []
builtin = ["dep:fastrand", "dep:fs2", "dep:sha2"]
external-slot = []
threat-scanner = ["dep:regex"]

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-trait = { workspace = true }
chrono = { workspace = true }
fastrand = { version = "2.4.1", optional = true }
fs2 = { version = "0.4.3", optional = true }
regex = { version = "1", optional = true }
serde = { workspace = true }
sha2 = { version = "0.10", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
