[package]
name = "octopus-harness-model"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_model"

[lints]
workspace = true

[features]
default = []
openai = []
anthropic = []
gemini = []
openrouter = []
bedrock = []
codex = []
local-llama = []
deepseek = []
minimax = []
qwen = []
doubao = []
zhipu = []
km = []
all-providers = [
  "openai",
  "anthropic",
  "gemini",
  "openrouter",
  "bedrock",
  "codex",
  "local-llama",
  "deepseek",
  "minimax",
  "qwen",
  "doubao",
  "zhipu",
  "km",
]
mock = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
