[package]
name = "octopus-harness-model"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_model"

[lints]
workspace = true

[features]
default = []
http-client = ["dep:reqwest"]
openai-compatible = ["http-client"]
openai = ["openai-compatible"]
anthropic = ["http-client"]
gemini = ["http-client"]
openrouter = ["openai-compatible"]
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
codex = ["openai-compatible"]
local-llama = ["openai-compatible"]
deepseek = ["openai-compatible"]
minimax = ["openai-compatible"]
qwen = ["openai-compatible"]
doubao = ["openai-compatible"]
zhipu = ["openai-compatible"]
km = ["openai-compatible"]
all-providers = [
  "openai",
  "anthropic",
  "gemini",
  "openrouter",
  "bedrock",
  "codex",
  "local-llama",
  "deepseek",
  "minimax",
  "qwen",
  "doubao",
  "zhipu",
  "km",
]
mock = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
parking_lot = "0.12"
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true, optional = true }
aws-config = { version = "1.5", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"], optional = true }
aws-sdk-bedrockruntime = { version = "1.69", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"], optional = true }
aws-smithy-types = { version = "1.4", optional = true }

[dev-dependencies]
wiremock = "0.6"
