[package]
name = "octopus-harness-permission"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_permission"

[lints]
workspace = true

[features]
default = []
interactive = []
stream = []
rule-engine = []
mock = []
auto-mode = ["dep:octopus-harness-model"]

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
octopus-harness-model = { path = "../octopus-harness-model", optional = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
