[package]
name = "octopus-harness-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_plugin"

[lints]
workspace = true

[features]
default = []
dynamic-load = []
manifest-sign = []
wasm-runtime = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
octopus-harness-hook = { path = "../octopus-harness-hook" }
octopus-harness-mcp = { path = "../octopus-harness-mcp" }
octopus-harness-skill = { path = "../octopus-harness-skill" }
octopus-harness-tool = { path = "../octopus-harness-tool" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
