[package]
name = "octopus-harness-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_sandbox"

[lints]
workspace = true

[features]
default = []
local = []
docker = []
ssh = []
noop = []
code-runtime = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
