[package]
name = "octopus-harness-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_sandbox"

[lints]
workspace = true

[features]
default = []
local = []
docker = []
ssh = []
noop = []
code-runtime = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-trait = { workspace = true }
blake3 = "1"
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12"
regex = "1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process"] }
tokio-util = { workspace = true, features = ["io"] }
