[package]
name = "octopus-harness-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_sandbox"

[lints]
workspace = true

[features]
default = []
local = []
docker = []
ssh = []
noop = []
code-runtime = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
async-trait = { workspace = true }
blake3 = "1"
bytes = { workspace = true }
chrono = { workspace = true }
command-fds = { version = "0.3.3", features = ["tokio"] }
futures = { workspace = true }
os_pipe = "1"
parking_lot = "0.12"
regex = "1"
serde = { workspace = true }
tar = "0.4"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process"] }
tokio-util = { workspace = true, features = ["io"] }
